<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.M3">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_dialog_edit_address_title"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6.5dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/string_text_btn_delete"
        android:textAllCaps="false"
        android:textColor="#EA4335"
        app:icon="@drawable/baseline_delete"
        app:iconGravity="textStart"
        app:iconTint="#EA4335"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:strokeColor="#EA4335" />

    <Button
        android:id="@+id/btnUpdate"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6.5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/string_text_btn_edit"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:icon="@drawable/baseline_edit_24"
        app:iconGravity="textStart"
        app:iconTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:strokeColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/transparent_background"
        android:text="@string/string_text_btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:indeterminateTint="@color/blue"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>