<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.register.ProfileFragment">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_personal_informations_page_title"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:src="@drawable/personal_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/labelTitle"
            app:layout_constraintStart_toStartOf="@+id/labelTitle"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:startIconDrawable="@drawable/outline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_profile_name_field"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateBirthLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/inputNameLayout"
            app:layout_constraintStart_toStartOf="@id/inputNameLayout"
            app:layout_constraintTop_toBottomOf="@id/inputNameLayout"
            app:startIconDrawable="@drawable/outline_calendar_month_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDateBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/string_profile_age_field" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNumberPhoneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/dateBirthLayout"
            app:layout_constraintStart_toStartOf="@+id/dateBirthLayout"
            app:layout_constraintTop_toBottomOf="@+id/dateBirthLayout"
            app:startIconDrawable="@drawable/baseline_phone_24">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtNumberPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_profile_phone_field"
                android:inputType="number"
                app:mask="(__) _____-____"
                app:maskCharacter="_"
                app:maskStyle="completable" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCroLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/inputNumberPhoneLayout"
            app:layout_constraintStart_toStartOf="@+id/inputNumberPhoneLayout"
            app:layout_constraintTop_toBottomOf="@+id/inputNumberPhoneLayout"
            app:startIconDrawable="@drawable/outline_badge_24">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtCro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_profile_cro_field"
                android:inputType="number"
                app:mask="__.____"
                app:maskCharacter="_"
                app:maskStyle="completable" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>