<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.register.EducationFragment">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/string_education_register_page_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputInstitutionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/labelTitle"
            app:layout_constraintStart_toStartOf="@+id/labelTitle"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle"
            app:startIconDrawable="@drawable/baseline_gps_fixed_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_education_institution_field"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputGraduationDateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/inputInstitutionLayout"
            app:layout_constraintStart_toStartOf="@id/inputInstitutionLayout"
            app:layout_constraintTop_toBottomOf="@id/inputInstitutionLayout"
            app:startIconDrawable="@drawable/baseline_gps_fixed_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtGraduationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/string_education_graduation_field" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>